kubernetes/applications/adventurelog/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog
  namespace: apps
spec:
  selector:
    matchLabels:
      app: adventurelog
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: adventurelog
    spec:
      volumes:
        - name: adventure-journal
          persistentVolumeClaim:
            claimName: adventurelog-journal
        - name: adventure-journal-db
          persistentVolumeClaim:
            claimName: adventurelog-journal-db
      containers:
        - name: adventure-frontend
          image: ghcr.io/seanmorley15/adventurelog-frontend:v0.12.0@sha256:9aa653603eb1305f3c34c61bc99b40a394295aed3fecd8c9777a9e5c04c7155e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 50m
              memory: 500Mi

        - name: adventure-db
          image: postgis/postgis:15-3.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: adventure-journal-db
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              cpu: 200m
              memory: 1Gi

        - name: adventure-backend
          image: ghcr.io/seanmorley15/adventurelog-backend:v0.12.0@sha256:68725d6a3692333e0049607f32078e865e95ebdb8a13e0c5512a01ef766770ae
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 8000
          volumeMounts:
            - name: adventure-journal
              mountPath: /code/media
          resources:
            limits:
              cpu: 200m
              memory: 1Gi
