kubernetes/applications/adventurelog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-db
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: db
  selector:
    app: adventurelog
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: frontend
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: base
  selector:
    app: adventurelog
