kubernetes/applications/adventurelog/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog-route
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "adventurelog.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /admin/
        - path:
            type: PathPrefix
            value: /auth/
        - path:
            type: PathPrefix
            value: /static/
        - path:
            type: PathPrefix
            value: /media/
      backendRefs:
        - name: adventurelog
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adventurelog
          port: 3000
